--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2024 Satori Restaurant. All rights reserved.</p>
+                <p>© 2025 Made by <a style="color: chartreuse;" href="https://n1k0devv.github.io/N1kodevv/#filter=all">N1kodevv</a>. All rights reserved.</p>
             </div>
         </div>
     </footer>
