--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style-fixed.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -561,7 +561,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2025 Made by <a style="color: chartreuse;" href="https://n1k0devv.github.io/N1kodevv/#filter=all">N1kodevv</a>. All rights reserved.</p>
+                <p>© 2025 Made by <a style="color: chartreuse;" href="https://n1k0devv.github.io/N1kodevv/#filter=all">N1kodev</a>. All rights reserved.</p>
             </div>
         </div>
     </footer>
